--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/cristiancrocha85/api-SistemaFotografico/issues"
   },
-  "homepage": "https://github.com/cristiancrocha85/api-SistemaFotografico#readme"
+  "homepage": "https://github.com/cristiancrocha85/api-SistemaFotografico#readme",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.56.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0"
+  }
 }
