--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@supabase/supabase-js": "^2.56.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "env-cmd": "^10.1.0"
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^11.0.0"
   }
 }
